# DesignPatternsWebinar

./: .gitignore  CMakeLists.txt
adapter/: adapter.cpp
builder/: builder.cpp
composite/: composite.cpp
facet-builders/: CMakeLists.txt  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonJobBuilder.h  facet-builders.cpp
groovy-builder/: groovy-builder.cpp
maybe-monad/: maybe-monad.cpp
specification/: specification.cpp
